# astroids_game

./: .gitignore  Asteroid.py  asteroid.py  asteroidfield.py  circleshape.py  constants.py  main.py  player.py  pyproject.toml  shot.py
